--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@nuxt/icon": "^1.13.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "^3.1.3",
+    "@types/p5": "^1.7.6",
     "eslint": "^9.29.0",
     "nuxt": "^3.17.5",
+    "p5": "^2.0.3",
     "typescript": "^5.8.3",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
